--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
+		"vite": "^4.3.6",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
+		"@sveltejs/vite-plugin-svelte": "^2.0.4",
+		"autoprefixer": "^10.4.14",
+		"tailwindcss": "^3.3.2"
 	},
 	"type": "module"
 }
