--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 19.2.0
           cache: npm
 
       - name: Install dependencies
@@ -25,13 +25,13 @@ jobs:
           BASE_PATH: ''
         run: |
           npm run build
-          touch .nojekyll
+          touch static/.nojekyll
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
         with:
           # this should match the `pages` option in your adapter-static options
-          path: ''
+          path: './'
 
   deploy:
     needs: build_site
