--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           BASE_PATH: ''
         run: |
           npm run build
-          touch static/.nojekyll
+          touch .nojekyll
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
